--- a/css/styles.css
+++ b/css/styles.css
@@ -15,3 +15,11 @@ html, body {
             width: 100%;
             text-align: center;
 			display: block;
+		}
+		p {
+            font-size: 1.2em;
+            margin-bottom: 20px;
+            text-align: center;
+            max-width: 1000px; /* Adjust max-width as needed */
+            margin: 0 auto; /* Center the paragraph horizontally */
+		}
