--- a/01/styles.css
+++ b/01/styles.css
@@ -61,7 +61,6 @@
 			width: 100%; /* Make sure the separator spans the entire width */
 			z-index: 10;
 		}
-
         .grid-container {
             display: grid;
             grid-template-columns: repeat(4, 1fr);
@@ -189,6 +188,11 @@
 			position: relative;
 			overflow: hidden;
 		}
+		
+		/* All the tile styles below are required for the adaptive lighting effect
+			when hovering over the tile. It actually puts a white
+			background colour over the top of the tile and increases 
+			opacity. */
 		.tile::before, .tile2::before, .tile3::before, .tile4::before, .tile5::before, .tile6::before, .tile7::before, .tile8::before, .tile9::before {
 			content: "";
 			position: absolute;
@@ -200,21 +204,19 @@
 			transition: background-color 0.3s ease;
 			z-index: 0;
 		}
-
 		.tile:hover::before, .tile2:hover::before, .tile3:hover::before, .tile4:hover::before, .tile5:hover::before, .tile6:hover::before, .tile7:hover::before, .tile8:hover::before, .tile9:hover::before  {
 			background-color: rgba(255, 255, 255, 0.3); /* Lighten by adding a white overlay */
 		}
-
 		.tile:hover, .tile2:hover, .tile3:hover, .tile4:hover, .tile5:hover, .tile6:hover, .tile7:hover, .tile8:hover, .tile9:hover {
 			transform: scale(1.03);
 		}
-
 		.tile > *, .tile2 > *, .tile3 > *, .tile4 > *, .tile5 > *, .tile6 > *, .tile7 > *, .tile8 > *, .tile9 > *  {
 			position: relative;
 			z-index: 1;
 		}
 
-		
+		/* Style for the paragraph text in the detail view
+		   as it requires to be different to the normal p style */
         .detail-view {
             display: none;
             flex-direction: column;
@@ -224,12 +226,15 @@
             text-align: center;
             padding: 20px;
         }
+		
         .detail-view p {
             font-size: 1em;
             margin: 20px 0;
 			max-width: 1000px;
 			
         }
+		
+		/* Back and copy button styling + animation timing */
         .back-button, .copy-button {
             background-color: #636569;
             color: white;
@@ -241,10 +246,12 @@
 			transition: transform 0.3s ease, background-color 0.3s ease; /* Add transition for smooth transformation and color change */
 
         }
+		
+		/* Lighten the back & copy background color on hover */
 		.back-button:hover, .copy-button:hover {
-			background-color: grey; /* Lighten the background color on hover */
-        
+			background-color: grey; 
 		}
+		/* Copy to clipboard Notification */
         .notification {
             position: fixed;
             bottom: 20px;
@@ -258,10 +265,14 @@
             transition: opacity 0.5s ease, transform 0.5s ease;
 			z-index: 1000;
         }
+		
+		/* Style for notification showing */
         .notification.show {
             opacity: 1;
             transform: translateX(-50%) translateY(0);
         }
+		
+		/* Style for notification hidden */
         .notification.hide {
             opacity: 0;
             transform: translateX(-50%) translateY(10px);
