--- a/01/styles.css
+++ b/01/styles.css
@@ -1,3 +1,14 @@
+		body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: flex-start;
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+        }
 		.emr-logo {
 			width: 18%;
 			height:auto;
