--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,12 @@
-
-        h1 {
+        body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            align-items: center;
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+        }
+		h1 {
             margin-top: 20px;
             margin-bottom: 20px;
             width: 100%;
