--- a/01/styles.css
+++ b/01/styles.css
@@ -1,6 +1,7 @@
 		.main-content {
             height: 100%;
-            margin: 0;
+            margin: 0 auto;
+			max-width: 1200px;
             padding: 0;
             display: flex;
             flex-direction: column;
