--- a/01/styles.css
+++ b/01/styles.css
@@ -1,3 +1,8 @@
+		h2 {
+			margin: 0 auto;
+			max-width: 1200px;
+		}
+		
 		.main-content {
             height: 100%;
             margin: 0 auto;
