--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,9 +1,4 @@
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-}
-
-.navbar {
+#main-navbar {
   background-color: #444;
   color: #ccc;
   padding: 10px 0;
@@ -22,34 +17,34 @@ body {
   font-size: 1.2em;
 }
 
-.navbar-links {
+#navbar-links {
   list-style-type: none;
   margin: 0;
   padding: 0;
   display: flex;
 }
 
-.navbar-links li {
+#navbar-links li {
   margin-right: 20px;
 }
 
-.navbar-links li a {
+#navbar-links li a {
   color: #ccc;
   text-decoration: none;
   transition: color 0.3s ease;
 }
 
-.navbar-links li a:hover {
+#navbar-links li a:hover {
   color: #fff;
 }
 
-.mobile-menu-toggle {
+#mobile-menu-toggle {
   display: none;
   flex-direction: column;
   cursor: pointer;
 }
 
-.mobile-menu-toggle span {
+#mobile-menu-toggle span {
   background-color: #ccc;
   height: 3px;
   width: 25px;
@@ -58,7 +53,7 @@ body {
 }
 
 @media screen and (max-width: 768px) {
-  .navbar-links {
+  #navbar-links {
     display: none;
     flex-direction: column;
     background-color: #333;
@@ -70,16 +65,16 @@ body {
     text-align: center;
   }
 
-  .navbar-links.active {
+  #navbar-links.active {
     display: flex;
   }
 
-  .mobile-menu-toggle {
+  #mobile-menu-toggle {
     display: flex;
   }
 
   .navbar-brand,
-  .navbar-links {
+  #navbar-links {
     width: 100%;
   }
 }
