--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
         body {
             height: 100%;
             margin: 0;
-            padding: 0;
+            padding: 32px;
             align-items: center;
             font-family: Arial, sans-serif;
             background-color: #f0f0f0;
