--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
         body {
             height: 100%;
             margin: 0;
-            padding-top: 32px;
+            padding-top: 62px; /* To ensure nav-bar renders in correct spot*/
             align-items: center;
             font-family: Arial, sans-serif;
             background-color: #f0f0f0;
