--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,22 +1,24 @@
 #main-navbar {
-  background-color: #444;
-  color: #ccc;
+  background-color: #fff; /* Change background color to white */
+  border-bottom: 2px solid #ccc; /* Add grey border at the bottom */
+  color: #000; /* Change text color to black for better contrast */
   padding: 10px 0;
   position: fixed;
   width: 100%;
-  top: 0; /* Ensure the navbar starts from the top of the page */
+  top: 0;
   z-index: 1000;
 }
 
 .container {
   display: flex;
   justify-content: space-between;
-  align-items: center; 
+  align-items: center;
 }
 
 .navbar-brand {
   font-size: 1.2em;
   margin-left: 10px;
+  font-weight: bold; /* Make text bold */
 }
 
 #navbar-links {
@@ -31,13 +33,15 @@
 }
 
 #navbar-links li a {
-  color: #ccc;
+  color: #000; /* Change link color to black for better contrast */
   text-decoration: none;
   transition: color 0.3s ease;
+  font-weight: bold; /* Make link text bold */
+  font-family: 'Arial', sans-serif; /* Use a thicker font */
 }
 
 #navbar-links li a:hover {
-  color: #fff;
+  color: #666; /* Change hover color to grey */
 }
 
 #mobile-menu-toggle {
@@ -47,7 +51,7 @@
 }
 
 #mobile-menu-toggle span {
-  background-color: #ccc;
+  background-color: #000; /* Change toggle color to black */
   height: 3px;
   width: 25px;
   margin: 3px 0;
@@ -58,14 +62,15 @@
   #navbar-links {
     display: none;
     flex-direction: column;
-    background-color: #333;
+    background-color: #fff; /* Match mobile menu background to navbar */
     position: absolute;
     top: 100%;
     left: 0;
     width: 100%;
     padding: 10px 0;
     text-align: center;
-    margin-top: 0; /* Remove any margin at the top */
+    margin-top: 0;
+    border-top: 2px solid #ccc; /* Add grey border at the top */
   }
 
   #navbar-links.active {
