--- a/02/domains.css
+++ b/02/domains.css
@@ -33,8 +33,8 @@ body {
             margin-top: 30px;
         }
         .admin-panel input, .admin-panel select {
-			display: flex;
-			width: 100%;
+			display: inline;
+			width: 200px;
 			padding: 10px;
 			font-size: 16px;
 			border: 1px solid #ccc;
