--- a/02/domains.css
+++ b/02/domains.css
@@ -1,77 +1,114 @@
 body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin-top: 50px;
-        }
-        table {
-            width: 60%;
-            margin: auto;
-            border-collapse: collapse;
-        }
-        th, td {
-            padding: 10px;
-            border: 1px solid #ddd;
-        }
-		    input[type="text"] {
-        width: 100%; /* You can adjust this value to control the width */
-        padding: 10px; /* Adjust padding as needed */
-        box-sizing: border-box; /* Ensure padding and border are included in width */
-    }
-        .status-circle {
-            width: 30px;
-            height: 30px;
-            border-radius: 50%;
-            display: inline-block;
-        }
-        .status-red {
-            background-color: red;
-        }
-        .status-yellow {
-            background-color: yellow;
-        }
-        .status-green {
-            background-color: green;
-        }
-        .admin-panel {
-            display: none;
-            margin-top: 30px;
-        }
-        .admin-panel input, .admin-panel select {
-			display: inline;
-			width: 200px;
-			padding: 10px;
-			font-size: 16px;
-			border: 1px solid #ccc;
-			border-radius: 5px;
-			margin-bottom: 10px;
-			box-sizing: border-box;
-			align-items: center;
-			flex-direction: row;
-		}
-		/* Back and copy button styling + animation timing */
-        .admin-button {
-            background-color: #636569;
-            color: white;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            margin: 5px;
-			transition: transform 0.3s ease, background-color 0.3s ease; /* Add transition for smooth transformation and color change */
-			z-index: 1001
-        }
-		
-		/* Lighten the back & copy background color on hover */
-		.admin-button:hover {
-			background-color: grey; 
-		}
-		.admin-panel:focus {
-			outline: none;
-			border-color: #007bff;
-			box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
-		}
+    font-family: Arial, sans-serif;
+    text-align: center;
+    margin-top: 50px;
+}
 
-		.admin-panel::placeholder {
-			color: #aaa;
-		}
-		
+table {
+    width: 60%;
+    margin: auto;
+    border-collapse: collapse;
+}
+
+th, td {
+    padding: 10px;
+    border: 1px solid #ddd;
+}
+
+.status-circle {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    display: inline-block;
+}
+
+.status-red {
+    background-color: red;
+}
+
+.status-yellow {
+    background-color: yellow;
+}
+
+.status-green {
+    background-color: green;
+}
+
+.admin-panel {
+    display: none;
+    margin-top: 30px;
+	width: 50%;
+	margin: 0 auto;
+}
+
+.admin-panel input,
+.admin-panel select,
+.admin-panel textarea {
+    display: block; /* Change to block to ensure each input element takes full width */
+    width: calc(100% - 22px); /* Adjust width to accommodate padding and border */
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    box-sizing: border-box;
+}
+
+.admin-panel textarea {
+	font-family: Arial, sans-serif;
+    height: 150px; /* Adjust height as needed */
+    resize: none; /* Allow vertical resizing */
+}
+
+.input-container {
+    display: flex;
+    align-items: center; /* Align items vertically */
+}
+
+.input-container select {
+    flex: 1; /* Take available space */
+    margin-right: 10px; /* Add some spacing between the dropdowns */
+}
+
+.admin-button {
+    background-color: #636569;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin: 5px;
+    transition: transform 0.3s ease, background-color 0.3s ease; /* Add transition for smooth transformation and color change */
+    z-index: 1001;
+}
+
+/* Lighten the back & copy background color on hover */
+.admin-button:hover {
+    background-color: grey;
+}
+
+.admin-panel:focus{
+    outline: none;
+    border-color: #007bff;
+    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+}
+
+.admin-panel::placeholder {
+    color: #aaa;
+}
+/* Placeholder style */
+.admin-panel textarea::placeholder {
+    color: #aaa;
+}
+
+/* Hover placeholder style */
+.admin-panel textarea:hover::placeholder {
+    color: #999;
+}
+
+/* Focus style */
+.admin-panel textarea:focus {
+    outline: none;
+    border-color: #007bff;
+    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+}
