--- a/01/styles.css
+++ b/01/styles.css
@@ -20,6 +20,8 @@
 			width: 18%;
 			height:auto;
 			align-items: center;
+			margin: auto;
+			display: flex;
 		}
 		.input-field {
 			display: flex;
