--- a/02/domains.css
+++ b/02/domains.css
@@ -5,7 +5,7 @@ body {
 }
 
 table {
-    width: 60%;
+    width: 70%;
     margin: auto;
     border-collapse: collapse;
 }
@@ -114,7 +114,7 @@ th, td {
 }
 /* Style for the table header */
 th {
-  background-color: #4CAF50; /* Change to your preferred header color */
+  background-color: #85d11a; /* Change to your preferred header color */
   color: white;
   text-align: left;
   padding: 8px;
@@ -135,6 +135,8 @@ td {
   border: 1px solid #ddd;
   text-align: left;
 }
+/* Style for the table cells which require centering add this to main.js
+	displayAllDomainDetails() */
 .td-center {
   padding: 8px;
   border: 1px solid #ddd;
