--- a/css/styles.css
+++ b/css/styles.css
@@ -12,9 +12,10 @@
             width: 100%;
             text-align: center;
 			display: block;
+			font-size: 25px;
 		}
 		p {
-            font-size: 1.2em;
+            font-size: 18px;
             margin-bottom: 20px;
             text-align: center;
             max-width: 1000px; /* Adjust max-width as needed */
