--- a/02/domains.css
+++ b/02/domains.css
@@ -1,3 +1,5 @@
+/* Existing styles... */
+
 table {
     width: 70%;
     margin: auto;
@@ -7,7 +9,9 @@ table {
 th, td {
     padding: 10px;
     border: 1px solid #ddd;
+    text-align: left; /* Center the text */
 }
+
 .status-circle {
     width: 30px;
     height: 30px;
@@ -30,37 +34,35 @@ th, td {
 .admin-panel {
     display: none;
     margin-top: 30px;
-	width: 50%;
-	margin: 0 auto;
+    width: 50%;
+    margin: 0 auto;
 }
 
 .admin-panel input,
 .admin-panel select,
 .admin-panel textarea {
-    display: block; /* Change to block to ensure each input element takes full width */
-    width: calc(100% - 22px); /* Adjust width to accommodate padding and border */
+    width: 100%;
     padding: 10px;
     font-size: 16px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    margin-bottom: 10px;
     box-sizing: border-box;
 }
 
 .admin-panel textarea {
-	font-family: Arial, sans-serif;
-    height: 150px; /* Adjust height as needed */
-    resize: none; /* Allow vertical resizing */
+    font-family: Arial, sans-serif;
+    height: 150px;
+    resize: none;
 }
 
 .input-container {
-    display: flex;
-    align-items: center; /* Align items vertically */
+    margin-bottom: 15px;
 }
 
-.input-container select {
-    flex: 1; /* Take available space */
-    margin-right: 10px; /* Add some spacing between the dropdowns */
+.input-container label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
 }
 
 .admin-button {
@@ -71,16 +73,14 @@ th, td {
     border-radius: 5px;
     cursor: pointer;
     margin: 5px;
-    transition: transform 0.3s ease, background-color 0.3s ease; /* Add transition for smooth transformation and color change */
-    z-index: 1001;
+    transition: transform 0.3s ease, background-color 0.3s ease;
 }
 
-/* Lighten the back & copy background color on hover */
 .admin-button:hover {
     background-color: grey;
 }
 
-.admin-panel:focus{
+.admin-panel:focus {
     outline: none;
     border-color: #007bff;
     box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
@@ -89,47 +89,41 @@ th, td {
 .admin-panel::placeholder {
     color: #aaa;
 }
-/* Placeholder style */
+
 .admin-panel textarea::placeholder {
     color: #aaa;
 }
 
-/* Hover placeholder style */
 .admin-panel textarea:hover::placeholder {
     color: #999;
 }
 
-/* Focus style */
 .admin-panel textarea:focus {
     outline: none;
     border-color: #007bff;
     box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
 }
-/* Style for the table header */
+
 th {
-  background-color: #85d11a; /* Change to your preferred header color */
+  background-color: #85d11a;
   color: white;
-  text-align: left;
   padding: 8px;
 }
 
-/* Style for the table rows */
 tr:nth-child(even) {
-  background-color: #f2f2f2; /* Light grey background for even rows */
+  background-color: #f2f2f2;
 }
 
 tr:nth-child(odd) {
-  background-color: #ffffff; /* White background for odd rows */
+  background-color: #ffffff;
 }
 
-/* Style for the table cells */
 td {
   padding: 8px;
   border: 1px solid #ddd;
   text-align: left;
 }
-/* Style for the table cells which require centering add this to main.js
-	displayAllDomainDetails() */
+
 .td-center {
   padding: 8px;
   border: 1px solid #ddd;
