--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
             margin: 0;
             padding-top: 62px; /* To ensure nav-bar renders in correct spot*/
             align-items: center;
-            font-family: Arial, sans-serif;
+            font-family: 'Helvetica', 'Arial', sans-serif;
             background-color: #f0f0f0;
         }
 		h1 {
