colour changes, updated blurb and headings

--- a/01/styles.css
+++ b/01/styles.css
@@ -85,7 +85,7 @@
 			z-index: 10;
         }
 		.tile {
-			background-color: #005CB9;
+			background-color: #00274f;
 			color: white;
 			padding: 20px;
 			text-align: center;
