--- a/css/styles.css
+++ b/css/styles.css
@@ -21,13 +21,32 @@
             max-width: 1000px; /* Adjust max-width as needed */
             margin: 0 auto; /* Center the paragraph horizontally */
 		}
-		.emr-logo {
-			width: 18%;
-			height:auto;
-			align-items: center;
-			margin: auto;
-			display: flex;
-		}
+		/* Styles for the Title Tile */
+			.emr-logo {
+				width: 50%;
+				height:auto;
+				align-items: center;
+				margin: auto;
+				padding: 20px;
+				display: flex;
+			}
+			.logo-bg {
+				max-width: 600px;
+				height: auto;
+				width: 100%;
+				background-color: white;
+				margin: 0 auto;
+				border-radius: 16px 16px 0 0;
+				justify-content: center;
+			}
+			.title-bg {
+				max-width: 600px;
+				width: 100%;
+				margin: 0px auto;
+				border-radius: 0 0 16px 16px;
+				background-color: #005CB9;
+				box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+			}
 		.heading {
 			margin: 0 auto;
 			padding: 10px 0 10px 0;
@@ -42,15 +61,7 @@
 			background-color: #005CB9;
 			
 		}
-		.heading-bg-alone {
-			max-width: 600px;
-			width: 100%;
-			background-color: white;
-			margin: 20px auto;
-			border-radius: 16px;
-			background-color: #005CB9;
-			box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-		}
+
 		.button-bg {
 			max-width: 1300px;
 			width: 100%;
