--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@
 		.blurb {
 			max-width: 800px;	
 			margin: 20px auto;
-			padding: 20px 0 20px 0;
+			padding: 20px;
 			background-color: #f9f9f9;	
 			border-radius: 16px;
 			border: 1px solid #d3d3d3;
